--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,21 @@
     @apply bg-background text-foreground;
   }
 }
+@layer base {
+  :root {
+    --chart-1: 25, 96%, 67%;
+    --chart-2: 32, 92%, 81%;
+    --chart-3: 51, 58%, 82%;
+    --chart-4: 162, 46%, 65%;
+    --chart-5: 150, 60%, 50%;
+    --chart-6: 270, 97%, 85%;
+  }
+
+  .dark {
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
+}
